# openapi/openapi/openapi.yaml
@@ -58,6 +58,8 @@ tags:
     description: "Operations related to Beer."
   - name: BeerOrder
     description: "Operations related to Beer Orders."
+  - name: Customer
+    description: "Operations related to Customers."
 x-tagGroups:
   - name: General
     tags:
@@ -66,6 +68,7 @@ x-tagGroups:
       - Echo
       - Beer
       - BeerOrder
+      - Customer
 
 servers:
   - url: https://{tenant}/api/v1
@@ -83,6 +86,10 @@ paths:
     $ref: 'paths/beerOrder.yaml'
   '/api/v1/beerOrder/{orderId}':
     $ref: 'paths/beerOrder_{orderId}.yaml'
+  '/api/v1/customers':
+    $ref: 'paths/customers.yaml'
+  '/api/v1/customers/{customerId}':
+    $ref: 'paths/customers_{customerId}.yaml'
 
 components:
   securitySchemes:
